--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@medusajs/icons": "^1.2.1",
     "@medusajs/ui": "^3.0.0",
     "@medusajs/ui-preset": "^1.1.3",
+    "@radix-ui/react-toggle-group": "^1.0.4",
     "dayjs": "^1.11.11",
+    "jotai": "^2.8.3",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
